<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin10">

    <RadioGroup
        android:id="@+id/rgApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin10">

        <RadioButton
            android:id="@+id/rdbLic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lic" />

           <RadioButton
            android:id="@+id/rdbMotor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_insurance" />

        <RadioButton
            android:id="@+id/rdbHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_insurance" />

        <RadioButton
            android:id="@+id/rdbMutual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mutual_fund" />

        <RadioButton
            android:id="@+id/rdbHomeLoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_loan" />

        <RadioButton
            android:id="@+id/rdbCarLoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_loan" />

        <RadioButton
            android:id="@+id/rdbTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour_travel" />

        <RadioButton
            android:id="@+id/rdbIpo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipo" />
    </RadioGroup>

      <!--  <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobileno"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/btnApply"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/apply"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/white" />



</LinearLayout>