<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">






            <!--  <EditText
                  android:id="@+id/etVehicle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/select_vehicle"
                  android:maxLines="1" />-->


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_VehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20">

                <EditText
                    android:id="@+id/etVehicleNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_no"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>





            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_PolicyNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20">

                <EditText
                    android:id="@+id/etPolicyNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/policy_no"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_PremiumAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20">

                <EditText
                    android:id="@+id/etPremiumAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/preimum_amt"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_DueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20">

                <EditText
                    android:id="@+id/etPremiumDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/preimum_due_date"
                    android:inputType="date"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnUpdate"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>